# mp3converter-backend

./: README.md  docker-compose.yml
nginx/: Dockerfile  nginx.conf
src/auth/: Dockerfile  README.md  init.sql  models.py  pyproject.toml  schema.py  server.py
src/auth/manifests/: auth-deploy.yaml  confimap.yaml  secret.yaml  service.yaml
src/converter/: .dockerignore  Dockerfile  README.md  consumer.py  pyproject.toml
src/converter/convert/: to_mp3.py
src/converter/manifests/: configmap.yaml  converter-deploy.yaml  secret.yaml
src/gateway/: .dockerignore  Dockerfile  README.md  pyproject.toml  server.py
src/gateway/auth/: __init__.py  validate.py
src/gateway/auth_svc/: __init__.py  access.py
src/gateway/manifests/: configmap.yml  gateway-deploy.yml  ingress.yml  mongo-deploy.yaml  secret.yml  service.yml
src/gateway/storage/: __init__.py  util.py
src/notification/: Dockerfile  README.md  consumer.py  pyproject.toml
src/notification/manifests/: notification-deploy.yaml  secret.yaml
src/notification/send/: email.py
src/rabbit/manifests/: headless-service.yaml  secret.yaml  service.yaml  statefulset.yaml
