[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "jedi>=0.19.2",
    "pika>=1.3.2",
    "pylint>=4.0.1",
    "pymongo>=4.15.3",
    "python-multipart>=0.0.6",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
